--- a/templates/edit_jd.html
+++ b/templates/edit_jd.html
@@ -3,7 +3,10 @@
 
 <h3 class="mb-3">Edit Job</h3>
 
-<form method="post" id="jd-form" action="{{ url_for('edit_jd') }}{% if jd and jd.code %}?code={{ jd.code }}{% endif %}">
+<form method="post"
+      id="jd-form"
+      action="{{ url_for('edit_jd') }}{% if jd and jd.code %}?code={{ jd.code }}{% endif %}"
+      style="padding-bottom:120px"><!-- ensures Save isn't hidden under sticky footer -->
   <div class="row g-3">
 
     <div class="col-md-3">
@@ -74,12 +77,12 @@
           <select class="ql-font"></select>
         </span>
         <span class="ql-formats">
-          <button class="ql-bold"></button>
-          <button class="ql-underline"></button>
+          <button type="button" class="ql-bold"></button>
+          <button type="button" class="ql-underline"></button>
         </span>
         <span class="ql-formats">
-          <button class="ql-list" value="bullet"></button>
-          <button class="ql-list" value="ordered"></button>
+          <button type="button" class="ql-list" value="bullet"></button>
+          <button type="button" class="ql-list" value="ordered"></button>
         </span>
       </div>
       <div id="jd_editor" style="min-height:240px; background:#fff; border:1px solid #dee2e6; border-radius:12px;"></div>
